--- a/recipe-page-main/Dockerfile
+++ b/recipe-page-main/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:latest
 
 COPY index.html /usr/share/nginx/html/
 COPY css/ /usr/share/nginx/html/
-COPY image-omelette.jpeg /usr/share/nginx/html/assets/
+COPY image-omelette.jpeg /usr/share/nginx/html/
 
 
 EXPOSE 80
